--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -9,8 +9,8 @@
   display: inline-block;
   padding-top: 24px;
   padding-bottom: 25px;
-}
 
-.page-header__logo--accent {
-  color: $accent-color;
+  &--accent {
+    color: $accent-color;
+  }
 }
