--- a/css/main.css
+++ b/css/main.css
@@ -64,13 +64,13 @@ body {
   display: flex;
 }
 
+.site-nav__item:not(:last-child) {
+  margin-right: 50px;
+}
+
 .site-nav__list {
   display: flex;
   margin-left: 93px;
-}
-
-.site-nav__item:not(:last-child) {
-  margin-right: 50px;
 }
 
 .site-nav__link {
@@ -86,8 +86,7 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.site-nav__link:hover,
-.site-nav__link:focus {
+.site-nav__link:hover, .site-nav__link:focus {
   color: #2196f3;
 }
 
@@ -102,7 +101,7 @@ body {
   position: relative;
 }
 
-.site-nav__link--current:after {
+.site-nav__link--current::after {
   content: "";
   position: absolute;
   left: 0;
@@ -142,14 +141,13 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.address__link:hover, .address__link:focus {
+  color: #2196f3;
+}
+
 .address__icon {
   fill: #757575;
   margin-right: 10px;
-}
-
-.address__link:hover,
-.address__link:focus {
-  color: #2196f3;
 }
 
 .address__link:hover .address__icon {
@@ -265,6 +263,10 @@ body {
   padding-bottom: 94px;
 }
 
+.section-service__item:not(:last-child) {
+  margin-right: 30px;
+}
+
 .section-service__list {
   display: flex;
 }
@@ -273,10 +275,6 @@ body {
   position: relative;
   display: block;
   font-size: 0;
-}
-
-.section-service__item:not(:last-child) {
-  margin-right: 30px;
 }
 
 .section-service__link {
@@ -359,14 +357,8 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-icon-list__link:hover,
-.social-icon-list__link:focus {
+.social-icon-list__link:hover, .social-icon-list__link:focus {
   background-color: #2196f3;
-}
-
-.social-icon-list__link:hover .social-icon-list__image,
-.social-icon-list__link:hover .social-icon-list__image {
-  fill: #ffffff;
 }
 
 .social-icon-list__image {
@@ -376,17 +368,17 @@ body {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.social-icon-list__link:hover .social-icon-list__image,
+.social-icon-list__link:focus .social-icon-list__image {
+  fill: #ffffff;
+}
+
 .section-clients__list {
   display: flex;
 }
 
 .section-clients__item:not(:last-child) {
   margin-right: 30px;
-}
-
-.section-clients__icon {
-  fill: #afb1b8;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .section-clients__link {
@@ -402,6 +394,11 @@ body {
 
 .section-clients__link:hover {
   border-color: #2196f3;
+}
+
+.section-clients__icon {
+  fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .section-clients__link:hover .section-clients__icon {
@@ -468,6 +465,10 @@ body {
   margin-right: 93px;
 }
 
+.footer__join-item:not(:last-child) {
+  margin-right: 10px;
+}
+
 .footer__join-title {
   color: #ffffff;
   font-weight: 700;
@@ -490,10 +491,6 @@ body {
   width: 20px;
   height: 20px;
   fill: #ffffff;
-}
-
-.footer__join-item:not(:last-child) {
-  margin-right: 10px;
 }
 
 .footer__join-link {
@@ -655,6 +652,10 @@ body {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.form__input:focus + .form__icon {
+  fill: #2196f3;
+}
+
 .form__label {
   font-size: 12px;
   line-height: 1.17px;
@@ -682,10 +683,6 @@ body {
 .form__input:focus {
   border-color: #2196f3;
   outline: none;
-}
-
-.form__input:focus + .form__icon {
-  fill: #2196f3;
 }
 
 .form__comment {
