--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -64,13 +64,13 @@ body {
   display: flex;
 }
 
+.site-nav__item:not(:last-child) {
+  margin-right: 50px;
+}
+
 .site-nav__list {
   display: flex;
   margin-left: 93px;
-}
-
-.site-nav__item:not(:last-child) {
-  margin-right: 50px;
 }
 
 .site-nav__link {
@@ -86,8 +86,7 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.site-nav__link:hover,
-.site-nav__link:focus {
+.site-nav__link:hover, .site-nav__link:focus {
   color: #2196f3;
 }
 
@@ -102,7 +101,7 @@ body {
   position: relative;
 }
 
-.site-nav__link--current:after {
+.site-nav__link--current::after {
   content: "";
   position: absolute;
   left: 0;
@@ -142,14 +141,13 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.address__link:hover, .address__link:focus {
+  color: #2196f3;
+}
+
 .address__icon {
   fill: #757575;
   margin-right: 10px;
-}
-
-.address__link:hover,
-.address__link:focus {
-  color: #2196f3;
 }
 
 .address__link:hover .address__icon {
@@ -160,6 +158,10 @@ body {
   margin-bottom: 50px;
   display: flex;
   justify-content: center;
+}
+
+.filter__item:not(:last-child) {
+  margin-right: 8px;
 }
 
 .filter__btn {
@@ -177,12 +179,7 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.filter__item:not(:last-child) {
-  margin-right: 8px;
-}
-
-.filter__btn:hover,
-.filter__btn:focus {
+.filter__btn:hover, .filter__btn:focus {
   color: #ffffff;
   background-color: #2196f3;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -338,6 +335,10 @@ body {
   margin-right: 93px;
 }
 
+.footer__join-item:not(:last-child) {
+  margin-right: 10px;
+}
+
 .footer__join-title {
   color: #ffffff;
   font-weight: 700;
@@ -360,10 +361,6 @@ body {
   width: 20px;
   height: 20px;
   fill: #ffffff;
-}
-
-.footer__join-item:not(:last-child) {
-  margin-right: 10px;
 }
 
 .footer__join-link {
