--- a/sass/components/_address.scss
+++ b/sass/components/_address.scss
@@ -25,18 +25,18 @@
   display: flex;
   align-items: center;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
 }
 
 .address__icon {
   fill: $primary-text-color;
   margin-right: 10px;
-}
 
-.address__link:hover,
-.address__link:focus {
-  color: $accent-color;
-}
-
-.address__link:hover .address__icon {
-  fill: $accent-color;
+  .address__link:hover & {
+    fill: $accent-color;
+  }
 }
