--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -6,11 +6,6 @@
   margin-right: 30px;
 }
 
-.section-clients__icon {
-  fill: $icon-color;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .section-clients__link {
   display: flex;
   justify-content: center;
@@ -20,12 +15,17 @@
   border: 1px solid $icon-color;
   border-radius: 4px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover {
+    border-color: $accent-color;
+  }
 }
 
-.section-clients__link:hover {
-  border-color: $accent-color;
-}
+.section-clients__icon {
+  fill: $icon-color;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.section-clients__link:hover .section-clients__icon {
-  fill: $accent-color;
+  .section-clients__link:hover & {
+    fill: $accent-color;
+  }
 }
