--- a/sass/components/_filter.scss
+++ b/sass/components/_filter.scss
@@ -2,6 +2,10 @@
   margin-bottom: 50px;
   display: flex;
   justify-content: center;
+
+  &__item:not(:last-child) {
+    margin-right: 8px;
+  }
 }
 
 .filter__btn {
@@ -19,16 +23,16 @@
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: $white-color;
+    background-color: $accent-color;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 }
 
-.filter__item:not(:last-child) {
-  margin-right: 8px;
-}
-
-.filter__btn:hover,
-.filter__btn:focus {
-  color: $white-color;
-  background-color: $accent-color;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-}
+// .filter__item:not(:last-child) {
+//   margin-right: 8px;
+// }
