--- a/sass/components/_join.scss
+++ b/sass/components/_join.scss
@@ -2,6 +2,10 @@
   padding-top: 72px;
   padding-bottom: 100px;
   margin-right: 93px;
+
+  &-item:not(:last-child) {
+    margin-right: 10px;
+  }
 }
 
 .footer__join-title {
@@ -28,10 +32,6 @@
   fill: $white-color;
 }
 
-.footer__join-item:not(:last-child) {
-  margin-right: 10px;
-}
-
 .footer__join-link {
   display: flex;
   justify-content: space-around;
@@ -41,8 +41,8 @@
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.footer__join-link:hover {
-  background-color: $accent-color;
+  &:hover {
+    background-color: $accent-color;
+  }
 }
