--- a/sass/components/_logo-footer.scss
+++ b/sass/components/_logo-footer.scss
@@ -6,8 +6,8 @@
   font-size: 26px;
   line-height: 1.2;
   text-decoration: none;
-}
 
-.page-footer__logo--accent {
-  color: $accent-color;
+  &--accent {
+    color: $accent-color;
+  }
 }
