--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -10,6 +10,10 @@
   transform: translateY(40%);
   fill: $title-text-color;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  .form__input:focus + & {
+    fill: $accent-color;
+  }
 }
 
 .form__label {
@@ -34,15 +38,11 @@
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   margin-bottom: 10px;
-}
 
-.form__input:focus {
-  border-color: $accent-color;
-  outline: none;
-}
-
-.form__input:focus + .form__icon {
-  fill: $accent-color;
+  &:focus {
+    border-color: $accent-color;
+    outline: none;
+  }
 }
 
 .form__comment {
@@ -53,18 +53,18 @@
   resize: none;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-}
 
-.form__comment:focus {
-  border-color: $accent-color;
-  outline: none;
-}
+  &:focus {
+    border-color: $accent-color;
+    outline: none;
+  }
 
-.form__comment::placeholder {
-  font-size: 12px;
-  line-height: 1.17px;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
+  &::placeholder {
+    font-size: 12px;
+    line-height: 1.17px;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+  }
 }
 
 .form__policy {
@@ -98,20 +98,20 @@
   color: $primary-text-color;
   line-height: 1.71;
   padding-left: 14px;
-}
 
-.form__agreement::before {
-  content: "";
-  display: inline-block;
-  width: 16px;
-  height: 15px;
-  margin-right: 9px;
-  vertical-align: text-top;
-  border: 2px solid $title-text-color;
-  border-radius: 2px;
-  background-color: #fff;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &::before {
+    content: "";
+    display: inline-block;
+    width: 16px;
+    height: 15px;
+    margin-right: 9px;
+    vertical-align: text-top;
+    border: 2px solid $title-text-color;
+    border-radius: 2px;
+    background-color: #fff;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 .form__checkbox:checked ~ .form__agreement::before {
