--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -51,10 +51,10 @@
 .close-icon {
   fill: #000000;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.close-icon:hover {
-  fill: $accent-color;
+  &:hover {
+    fill: $accent-color;
+  }
 }
 
 .modal__title {
