--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -1,14 +1,14 @@
 .site-nav {
   display: flex;
+
+  &__item:not(:last-child) {
+    margin-right: 50px;
+  }
 }
 
 .site-nav__list {
   display: flex;
   margin-left: 93px;
-}
-
-.site-nav__item:not(:last-child) {
-  margin-right: 50px;
 }
 
 .site-nav__link {
@@ -22,31 +22,31 @@
   padding-top: 32px;
   padding-bottom: 32px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.site-nav__link:hover,
-.site-nav__link:focus {
-  color: $accent-color;
-}
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
 
-.site-nav__link--current {
-  color: $accent-color;
-  display: inline-block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
+  &--current {
+    color: $accent-color;
+    display: inline-block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
 
-.site-nav__link--current {
-  position: relative;
-}
+  &--current {
+    position: relative;
+  }
 
-.site-nav__link--current:after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: $accent-color;
+  &--current::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: $accent-color;
+  }
 }
