--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -41,17 +41,17 @@
   background-color: $white-color;
   border: 1px solid $projects-item-border;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.projects__item:hover {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+  &:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 
-.projects__item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-}
+  &:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
 
-.projects__item:nth-child(3n) {
-  margin-right: 0;
+  &:nth-child(3n) {
+    margin-right: 0;
+  }
 }
