--- a/sass/components/_service.scss
+++ b/sass/components/_service.scss
@@ -1,6 +1,10 @@
 .section-service {
   padding-top: 0;
   padding-bottom: 94px;
+
+  &__item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .section-service__list {
@@ -11,10 +15,6 @@
   position: relative;
   display: block;
   font-size: 0;
-}
-
-.section-service__item:not(:last-child) {
-  margin-right: 30px;
 }
 
 .section-service__link {
