--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -3,10 +3,10 @@
   padding-bottom: 30px;
   padding-left: 32px;
   padding-right: 32px;
-}
 
-.social-icon-list__item:not(:last-child) {
-  margin-right: 10px;
+  &__item:not(:last-child) {
+    margin-right: 10px;
+  }
 }
 
 .social-icon-list__link {
@@ -18,16 +18,11 @@
   background-color: $white-color;
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.social-icon-list__link:hover,
-.social-icon-list__link:focus {
-  background-color: $accent-color;
-}
-
-.social-icon-list__link:hover .social-icon-list__image,
-.social-icon-list__link:hover .social-icon-list__image {
-  fill: $white-color;
+  &:hover,
+  &:focus {
+    background-color: $accent-color;
+  }
 }
 
 .social-icon-list__image {
@@ -35,4 +30,9 @@
   height: 20px;
   fill: $icon-color;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  .social-icon-list__link:hover &,
+  .social-icon-list__link:focus & {
+    fill: $white-color;
+  }
 }
