--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -29,18 +29,18 @@
   text-transform: uppercase;
 }
 
-.hero__button {
-  display: inline-block;
-  border-radius: 4px;
-  border: 1px solid transparent;
-  min-width: 136px;
-  padding: 10px 32px;
-  color: $white-color;
-  background: $accent-color;
-  letter-spacing: 0.06em;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.9;
-  text-decoration: none;
-  text-align: center;
-}
+// .hero__button {
+//   display: inline-block;
+//   border-radius: 4px;
+//   border: 1px solid transparent;
+//   min-width: 136px;
+//   padding: 10px 32px;
+//   color: $white-color;
+//   background: $accent-color;
+//   letter-spacing: 0.06em;
+//   font-weight: 700;
+//   font-size: 16px;
+//   line-height: 1.9;
+//   text-decoration: none;
+//   text-align: center;
+// }
