--- a/sass/components/_sign.scss
+++ b/sass/components/_sign.scss
@@ -38,23 +38,23 @@
   }
 }
 
-.sign-btn {
-  width: 200px;
-  height: 50px;
-  background-color: $accent-color;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border-color: transparent;
-  color: $white-color;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
+// .sign-btn {
+//   width: 200px;
+//   height: 50px;
+//   background-color: $accent-color;
+//   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+//   border-radius: 4px;
+//   border-color: transparent;
+//   color: $white-color;
+//   font-weight: 700;
+//   font-size: 16px;
+//   line-height: 1.87;
+//   letter-spacing: 0.06em;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+// }
 
 .icon-send {
   fill: $white-color;
